packages/survey-core/src/default-theme/blocks/sd-panel.scss
@use "../variables.scss" as *;
@use "../typography-mixins.scss" as *;

.sd-panel {
  display: flex;
  flex-direction: column;
  position: relative;
  padding-inline-start:  var(--sjs2-layout-component-panel-box-padding-horizontal, var(--sjs2-spacing-x000));
  padding-inline-end: var(--sjs2-layout-component-panel-box-padding-horizontal, var(--sjs2-spacing-x000));
  padding-top: var(--sjs2-layout-component-panel-box-padding-top, var(--sjs2-spacing-x000));
  padding-bottom: var(--sjs2-layout-component-panel-box-padding-bottom, var(--sjs2-spacing-x000));
  gap: var(--sjs2-layout-component-panel-box-gap-vertical, var(--sjs2-spacing-x000));
}

.sd-panel__header {
  // display: flex;
  // flex-direction: column;
  padding: var(--sjs2-layout-component-panel-header-padding-vertical, var(--sjs2-spacing-x400)) var(--sjs2-layout-component-panel-header-padding-horizontal, var(--sjs2-layout-component-panel-content-area-padding-horizontal));
  // gap: var(--sjs2-layout-component-panel-header-gap-vertical, var(--sjs2-spacing-x050));
}

.sd-panel__title {
  padding: var(--sjs2-layout-component-panel-title-padding-vertical, var(--sjs2-spacing-x000)) var(--sjs2-layout-component-panel-title-padding-horizontal, var(--sjs2-spacing-x000));
}

.sd-panel__description {
  padding-inline-start:  var(--sjs2-layout-component-panel-description-padding-horizontal, var(--sjs2-spacing-x000));
  padding-inline-end: var(--sjs2-layout-component-panel-description-padding-horizontal, var(--sjs2-spacing-x000));
  padding-top: var(--sjs2-layout-component-panel-description-padding-top, var(--sjs2-spacing-x000));
  padding-bottom: var(--sjs2-layout-component-panel-description-padding-bottom, var(--sjs2-spacing-x000));
}

.sd-panel__content {
  padding-inline-start:  var(--sjs2-layout-component-panel-content-area-padding-horizontal, var(--sjs2-spacing-x500));
  padding-inline-end: var(--sjs2-layout-component-panel-content-area-padding-horizontal, var(--sjs2-spacing-x500));
  padding-top: var(--sjs2-layout-component-panel-content-area-padding-vertical, var(--sjs2-spacing-x500));
  --animation-padding-top: var(--sjs2-layout-component-panel-content-area-padding-vertical, var(--sjs2-spacing-x500));
  padding-bottom: var(--sjs2-layout-component-panel-content-area-padding-vertical, var(--sjs2-spacing-x500));
  row-gap: var(--sjs2-layout-component-panel-content-area-gap-vertical, var(--sjs2-spacing-x400));
  column-gap: var(--sjs2-layout-component-panel-content-area-gap-horizontal, var(--sjs2-spacing-x500));
  display: flex;
  flex-direction: column;
}

.sd-root-modern--mobile {
 .sd-panel__header {
    padding: var(--sjs2-spacing-x200) var(--sjs2-spacing-x300);
  }
  .sd-element--nested > .sd-panel__header {
    padding: var(--sjs2-spacing-x100) var(--sjs2-spacing-x300);
  }
 .sd-panel__content {
    padding: var(--sjs2-spacing-x300);
    gap: var(--sjs2-spacing-x200);
  }
}

.sd-panel.sd-panel--as-page {
  & > .sd-panel__header.sd-panel__header {
    padding: 0;
    padding-bottom: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x150));

    &:after {
      content: none;
    }

    .sd-panel__title {
      @include sjs2--typography--component--page--title;
      position: static;
      // margin: 0 0 var(--sjs2-spacing-x050) 0px;

      span {
        font-family: inherit;
        font-size: inherit;
        font-weight: inherit;
        color: inherit;
        line-height: inherit;
      }
    }

    .sd-element__num {
      padding: initial;
      margin: initial;
      float: initial;
      width: initial;
    }

    .sd-panel__description {
      @include sjs2--typography--component--page--description;
      position: static;
      // margin: 0 0 var(--sjs2-spacing-x050) 0;
    }

    .sd-panel__required-text {
      display: none;
    }
  }

  & > .sd-panel__errbox {
    margin: 0 0 var(--sjs2-spacing-x200) 0;
    padding: calc(0.5 * var(--sd-base-vertical-padding) + var(--sjs2-spacing-x100)) var(--sd-base-padding);
  }

  & > .sd-panel__content {
    padding: 0;
    row-gap: var(--sjs2-spacing-x200);
  }
}

.sd-root--compact {
  // .sd-panel__content {
  //   padding-top: var(--sjs2-spacing-x500);
  //   --animation-padding-top: var(--sjs2-spacing-x500);
  //   padding-bottom: var(--sjs2-spacing-x500);
  //   row-gap: var(--sjs2-spacing-x400);
  // }

  .sd-panel--as-page {
    & > .sd-panel__errbox {
      margin: 0 0 var(--sd-base-vertical-padding) 0;
    }
  }
}

.sd-row ~ .sd-row {
  .sd-panel--as-page {
    padding-top: var(--sjs2-spacing-x400);
  }
}

.sd-panel__required-text {
  color: $red;
}

.sd-panel__title {
  @include sjs2--typography--component--panel--title;
  padding: var(--sjs2-layout-component-panel-title-padding-vertical)
    var(--sjs2-layout-component-panel-title-padding-horizontal);
}

.sd-panel__description {
  @include sjs2--typography--component--panel--description;
  color: $font-questiondescription-color;
  padding-top: var(--sjs2-layout-component-panel-description-padding-top);
  padding-bottom: var(--sjs2-layout-component-panel-description-padding-bottom);
  padding-inline: var(--sjs2-layout-component-panel-description-padding-horizontal);
}

.sd-panel__title ~ .sd-panel__description {
  // margin-top: calc(0.25 * var(--sd-base-vertical-padding) - var(--sjs2-size-x050));
  margin-top: var(--sjs2-layout-component-panel-header-gap-vertical, var(--sjs2-spacing-x050));
}

.sd-panel > .sd-panel__header:after {
  background: var(--sjs2-color-component-panel-default-separator);
}

.sd-panel__footer {
  box-sizing: border-box;
  // padding-left: calc(var(--sd-base-padding) + var(--sjs2-spacing-negative-x150) + var(--sjs2-spacing-negative-x025));
  // margin-left: calc(-1 * var(--sd-base-padding));
  // width: calc(100% + 2 * var(--sd-base-padding));
  // margin-bottom: calc(-1 * var(--sd-base-padding) + 0.5 * var(--sd-base-vertical-padding));
  // margin-top: calc(0.5 * var(--sd-base-vertical-padding));
  padding: var(--sjs2-layout-component-panel-footer-padding-vertical, var(--sjs2-spacing-x200)) var(--sjs2-layout-component-panel-footer-padding-horizontal, var(--sjs2-layout-component-panel-content-area-padding-horizontal));
  border-top: 1px solid $border-light;
  margin-top: calc(-1 * var(--sjs2-spacing-x300));
  padding-inline-start: calc(var(--sjs2-layout-component-panel-content-area-padding-horizontal) - 1.75 * var(--sjs2-spacing-x100));
  padding-top: calc(0.5 * var(--sd-base-vertical-padding));
  --sd-action-bar-gap: var(--sjs2-layout-component-panel-footer-action-group-gap);
}

.sd-panel--as-page .sd-panel__footer {
  padding: var(--sjs2-spacing-x400) 0 0;
  margin: 0;
  border: none;
  width: initial;
}
// .sd-panel__content {
//   padding-top: var(--sd-base-padding);
// }

.sd-panel.sd-element--nested {
  & > .sd-panel__content {
    padding-bottom: var(--sd-base-padding);
    --animation-padding-top: var(--sd-base-padding);
  }
}

// .sd-panel__content {
//   --animation-padding-top: var(--sd-base-padding);
// }

